fix spacing issues

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -107,25 +107,25 @@
       &__button {
         display: block;
         margin-left: auto;
-        background-color: #ffcc00;
+        background: $blue-grey;
         padding: 33px 59px;
         padding-right: $side-gutter;
         color: $dark-grey;
         font-size: 18px;
         font-weight: 700;
         letter-spacing: 2px;
-        color: $dark-grey;
+        color: $white;
         text-decoration: none;
         opacity: 1;
         transition: background-color 0.2s;
 
         &:hover {
-          background-color: #ffdb4a;
+          background-color: #a1a1b1;
         }
 
         &:focus {
-          background-color: #ffcc00;
-          outline: solid 3px $blue-grey;
+          background-color: $blue-grey;
+          outline: solid 3px $white;
           outline-offset: -3px;
         }
       }
